--- a/practicas_profesionalizantes/spam_detection/static/style.css
+++ b/practicas_profesionalizantes/spam_detection/static/style.css
@@ -1,55 +1,80 @@
-body{
-	font:15px/1.5 Arial, Helvetica,sans-serif;
+body {
 	padding: 0px;
-	background-color:#f4f3f3;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-image: url("fondo.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
-.container{
+.container {
 	width:100%;
 	margin: auto;
 	overflow: hidden;
 }
 
-header{
-	background:#03A9F4;#35434a;
-	border-bottom:#448AFF 3px solid;
-	height:120px;
+header {
+	height: 200px;
 	width:100%;
 	padding-top:30px;
-
 }
 
-.main-header{
+.main-header {
 			text-align:center;
-			background-color: blue;
+			background-color: #1d6475;
 			height:100px;
 			width:100%;
 			margin:0px;
-		}
-#brandname{
-	float:left;
-	font-size:30px;
-	color: #fff;
+			text-align: center;
+}
+
+#brandname {
+	text-align:center;
+	font-size:20px;
+	color: #1d6475;
 	margin: 10px;
 }
 
 header h2{
 	text-align:center;
-	color:#fff;
-
+	color:#1d6475;
+	font-size: 15px;
 }
 
+.message {
+	text-align:center;
+	padding: 10px;
+	margin: 10px 0;
+	font-size: 15px;
+	color: #1d6475;
+	width: 100%;
+	height: 100%;
+}
 
-
-.btn-info {background-color: #2196F3;
+.btn-info {
+	background-color: #1d6475;
+	color: aliceblue;
 	height:40px;
-	width:100px;} /* Blue */
-.btn-info:hover {background: #0b7dda;}
+	width:100px;
+	display: block;
+	margin: 0 auto;
+	border-radius: 10px;
+}
+
+.box {
+	border-radius: 10px;
+}
+
+.btn-info:hover {background: #1d6475;}
 
 
-.resultss{
+.resultss {
 	border-radius: 15px 50px;
-    background: #345fe4;
+    background: #1d6475;
     padding: 20px; 
     width: 200px;
     height: 150px;
