--- a/practicas_profesionalizantes/spam_detection/templates/result.html
+++ b/practicas_profesionalizantes/spam_detection/templates/result.html
@@ -2,30 +2,26 @@
 <html>
 <head>
 	<title></title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
 </head>
 <body>
 
 	<header>
 		<div class="container">
-		<div id="brandname">
-			ML App
+			<div id="brandname">
+				<h1><span class="highlight">Spam</span> ML App </h1>
+				<h2>Spam Detector For SMS Messages</h2>
+			</div>	
 		</div>
-		<h2>Spam Detector For SMS Messages</h2>
-		
-	</div>
 	</header>
-	<p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
-	<div class="results">
 
-
-		
-	{% if prediction == 1%}
-	<h2 style="color:red;">Spam</h2>
-	{% elif prediction == 0%}
-	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
-	{% endif %}
-
+	<p style="color:#1d6475;font-size:20;text-align: center;"><b>Results for Comment</b></p>
+		<div class="results">	
+		{% if prediction == 1%}
+		<h2 style="color:rgb(170, 11, 11);">Spam</h2>
+		{% elif prediction == 0%}
+		<h2 style="color:#1d6475;">Not a Spam (It is a Ham)</h2>
+		{% endif %}
 	</div>
 
 </body>
